.antlr/GraphqlParser.java
// Generated from /Users/yannlelorier/Documents/Yann Le Lorier/TEC/Semestre 7/compilers/CompiladoresFinal/Graphql.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraphqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, QUERY=20, INTROSPECTION=21, ID=22, NUM=23, WS=24, 
		COMMENT=25, FLOAT=26, NULL=27, STRING=28, BOOLEAN=29;
	public static final int
		RULE_expr = 0, RULE_query = 1, RULE_fragmentDef = 2, RULE_queryblocks = 3, 
		RULE_queryblock = 4, RULE_conditions = 5, RULE_params = 6, RULE_param = 7, 
		RULE_fragmentQ = 8, RULE_condition = 9, RULE_factor = 10, RULE_assignment = 11, 
		RULE_table = 12, RULE_alias = 13, RULE_field = 14, RULE_value = 15, RULE_logop = 16, 
		RULE_variable = 17, RULE_directive = 18, RULE_introspection = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "query", "fragmentDef", "queryblocks", "queryblock", "conditions", 
			"params", "param", "fragmentQ", "condition", "factor", "assignment", 
			"table", "alias", "field", "value", "logop", "variable", "directive", 
			"introspection"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'fragment'", "'on'", "','", "'...'", 
			"'='", "':'", "'_eq'", "'_gt'", "'_lt'", "'_gte'", "'_lte'", "'$'", "'@include'", 
			"'if'", "'@skip'", "'query'", null, null, null, null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "QUERY", "INTROSPECTION", 
			"ID", "NUM", "WS", "COMMENT", "FLOAT", "NULL", "STRING", "BOOLEAN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Graphql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExprContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public FragmentDefContext fragmentDef() {
			return getRuleContext(FragmentDefContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			setState(42);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUERY:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				query();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				fragmentDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public TerminalNode QUERY() { return getToken(GraphqlParser.QUERY, 0); }
		public QueryblocksContext queryblocks() {
			return getRuleContext(QueryblocksContext.class,0);
		}
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(QUERY);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(45);
				match(ID);
				}
			}

			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(48);
				match(T__0);
				setState(49);
				conditions();
				setState(50);
				match(T__1);
				}
			}

			setState(54);
			match(T__2);
			setState(55);
			queryblocks();
			setState(56);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FragmentDefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FragmentDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fragmentDef; }
	}

	public final FragmentDefContext fragmentDef() throws RecognitionException {
		FragmentDefContext _localctx = new FragmentDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fragmentDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__4);
			setState(59);
			match(ID);
			setState(60);
			match(T__5);
			setState(61);
			table();
			setState(62);
			match(T__2);
			setState(63);
			params();
			setState(64);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryblocksContext extends ParserRuleContext {
		public QueryblockContext queryblock() {
			return getRuleContext(QueryblockContext.class,0);
		}
		public QueryblocksContext queryblocks() {
			return getRuleContext(QueryblocksContext.class,0);
		}
		public QueryblocksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryblocks; }
	}

	public final QueryblocksContext queryblocks() throws RecognitionException {
		QueryblocksContext _localctx = new QueryblocksContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_queryblocks);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				queryblock();
				setState(67);
				queryblocks();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryblockContext extends ParserRuleContext {
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public QueryblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryblock; }
	}

	public final QueryblockContext queryblock() throws RecognitionException {
		QueryblockContext _localctx = new QueryblockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_queryblock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			table();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(73);
				match(T__0);
				setState(74);
				conditions();
				setState(75);
				match(T__1);
				}
			}

			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16 || _la==T__18) {
				{
				setState(79);
				directive();
				}
			}

			setState(82);
			match(T__2);
			setState(83);
			params();
			setState(84);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public ConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions; }
	}

	public final ConditionsContext conditions() throws RecognitionException {
		ConditionsContext _localctx = new ConditionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditions);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				condition();
				setState(87);
				match(T__6);
				setState(88);
				conditions();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				condition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_params);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case INTROSPECTION:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				param();
				setState(95);
				params();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	 
		public ParamContext() { }
		public void copyFrom(ParamContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParamFragQContext extends ParamContext {
		public FragmentQContext fragmentQ() {
			return getRuleContext(FragmentQContext.class,0);
		}
		public IntrospectionContext introspection() {
			return getRuleContext(IntrospectionContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public ParamFragQContext(ParamContext ctx) { copyFrom(ctx); }
	}
	public static class ParamFieldContext extends ParamContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public IntrospectionContext introspection() {
			return getRuleContext(IntrospectionContext.class,0);
		}
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public ParamFieldContext(ParamContext ctx) { copyFrom(ctx); }
	}
	public static class ParamQueryblockContext extends ParamContext {
		public QueryblockContext queryblock() {
			return getRuleContext(QueryblockContext.class,0);
		}
		public IntrospectionContext introspection() {
			return getRuleContext(IntrospectionContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public ParamQueryblockContext(ParamContext ctx) { copyFrom(ctx); }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_param);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				_localctx = new ParamFieldContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INTROSPECTION) {
					{
					setState(100);
					introspection();
					}
				}

				setState(103);
				field();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(104);
					match(T__0);
					setState(105);
					conditions();
					setState(106);
					match(T__1);
					}
				}

				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16 || _la==T__18) {
					{
					setState(110);
					directive();
					}
				}

				}
				break;
			case 2:
				_localctx = new ParamQueryblockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INTROSPECTION) {
					{
					setState(113);
					introspection();
					}
				}

				setState(116);
				queryblock();
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16 || _la==T__18) {
					{
					setState(117);
					directive();
					}
				}

				}
				break;
			case 3:
				_localctx = new ParamFragQContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INTROSPECTION) {
					{
					setState(120);
					introspection();
					}
				}

				setState(123);
				fragmentQ();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16 || _la==T__18) {
					{
					setState(124);
					directive();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FragmentQContext extends ParserRuleContext {
		public FragmentQContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fragmentQ; }
	 
		public FragmentQContext() { }
		public void copyFrom(FragmentQContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FragOnParamsContext extends FragmentQContext {
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FragOnParamsContext(FragmentQContext ctx) { copyFrom(ctx); }
	}
	public static class FragIDContext extends FragmentQContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public FragIDContext(FragmentQContext ctx) { copyFrom(ctx); }
	}

	public final FragmentQContext fragmentQ() throws RecognitionException {
		FragmentQContext _localctx = new FragmentQContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fragmentQ);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new FragIDContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(T__7);
				setState(130);
				match(ID);
				}
				break;
			case 2:
				_localctx = new FragOnParamsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(T__7);
				setState(132);
				match(T__5);
				setState(133);
				table();
				setState(134);
				match(T__2);
				setState(135);
				params();
				setState(136);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondValFactContext extends ConditionContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public LogopContext logop() {
			return getRuleContext(LogopContext.class,0);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public CondValFactContext(ConditionContext ctx) { copyFrom(ctx); }
	}
	public static class CondEpsilonContext extends ConditionContext {
		public CondEpsilonContext(ConditionContext ctx) { copyFrom(ctx); }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condition);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
			case ID:
			case NUM:
			case FLOAT:
			case NULL:
			case STRING:
			case BOOLEAN:
				_localctx = new CondValFactContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				value();
				setState(141);
				logop();
				setState(142);
				factor();
				}
				break;
			case T__1:
			case T__6:
				_localctx = new CondEpsilonContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
	 
		public FactorContext() { }
		public void copyFrom(FactorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FactorValAssValContext extends FactorContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FactorValAssValContext(FactorContext ctx) { copyFrom(ctx); }
	}
	public static class FactorValContext extends FactorContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public FactorValContext(FactorContext ctx) { copyFrom(ctx); }
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_factor);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				_localctx = new FactorValContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				value();
				}
				break;
			case 2:
				_localctx = new FactorValAssValContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				value();
				setState(149);
				assignment();
				setState(150);
				value();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_table);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				setState(156);
				alias();
				setState(157);
				match(T__9);
				}
				break;
			}
			setState(161);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(165);
				alias();
				setState(166);
				match(T__9);
				}
				break;
			}
			setState(170);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	 
		public ValueContext() { }
		public void copyFrom(ValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValFloatContext extends ValueContext {
		public TerminalNode FLOAT() { return getToken(GraphqlParser.FLOAT, 0); }
		public ValFloatContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class ValBoolContext extends ValueContext {
		public TerminalNode BOOLEAN() { return getToken(GraphqlParser.BOOLEAN, 0); }
		public ValBoolContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class ValIDContext extends ValueContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public ValIDContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class ValStringContext extends ValueContext {
		public TerminalNode STRING() { return getToken(GraphqlParser.STRING, 0); }
		public ValStringContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class ValValContext extends ValueContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ValValContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class ValNumContext extends ValueContext {
		public TerminalNode NUM() { return getToken(GraphqlParser.NUM, 0); }
		public ValNumContext(ValueContext ctx) { copyFrom(ctx); }
	}
	public static class ValNullContext extends ValueContext {
		public TerminalNode NULL() { return getToken(GraphqlParser.NULL, 0); }
		public ValNullContext(ValueContext ctx) { copyFrom(ctx); }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_value);
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				_localctx = new ValValContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				variable();
				}
				break;
			case FLOAT:
				_localctx = new ValFloatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				match(FLOAT);
				}
				break;
			case NUM:
				_localctx = new ValNumContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				match(NUM);
				}
				break;
			case STRING:
				_localctx = new ValStringContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(175);
				match(STRING);
				}
				break;
			case BOOLEAN:
				_localctx = new ValBoolContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(176);
				match(BOOLEAN);
				}
				break;
			case NULL:
				_localctx = new ValNullContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(177);
				match(NULL);
				}
				break;
			case ID:
				_localctx = new ValIDContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(178);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogopContext extends ParserRuleContext {
		public LogopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logop; }
	}

	public final LogopContext logop() throws RecognitionException {
		LogopContext _localctx = new LogopContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_logop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GraphqlParser.ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(T__15);
			setState(184);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
